--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^2.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
+    "jsdom": "^20.0.0",
     "morgan": "^1.9.1",
     "pg": "^8.5.0",
     "sass": "^1.35.1"
